# ChemLLM

./: Benchmark.pth  Benchmark_loss.csv  Benchmark_test.csv  Benchmark_val.csv  LICENSE  environment.yml  runner.py
ChemLLM/: README.md  params.py  pyproject.toml  run.py  setup.py  trainer.py
ChemLLM/ChemLLM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ChemLLM/finetuning/: adafusion.py  adaptive.py  base.py  bitfit.py  ciat.py  coda.py  diffpruning.py  lora.py  mera.py  partial_freezing.py  pha.py  prefix.py  reft.py  rlhf.py  sparse.py
ChemLLM/predictor/: gbt.py  gp.py  regression.py  subnet.py  tuning.py
ChemLLM/utils/: helpers.py  hfmodel.py  initalizer.py
