[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ChemLLM"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A chemistry-focused LLM project"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.10.0",
    "transformers>=4.18.0",
    "datasets>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ChemLLM"

[tool.setuptools.packages.find]
where = ["."]